build(jdk): U1 — descend the reactor to the JDK 25 LTS baseline
Kernel 0.11.0 (ADR-066) and SDK 0.10.0 (ADR-069) both moved to JDK 25 LTS,
leaving this repo as the last stop on the LTS path: an LTS build could compile
against the annotations but not run the processor. This closes that.

The exactly-26 enforcer pin was never about the language level. It existed
because kernel 0.10.x shipped preview-tagged SPI class files, which javac
refuses to load unless the consuming compilation enables preview for the same
release — and javac rejects preview compilation for a non-current release, so
"preview" forced "exactly 26". Kernel 0.11.0 ships zero preview-stamped classes
at major 69, so the cause is gone and the pin becomes a floor: [25,).

Net removal, as forecast:

  enforcer                 [26,27) -> [25,)
  maven.compiler.*         26 -> 25
  InMemoryJavaCompiler     --release 26 --enable-preview -> --release 25
  GeneratedTestsE2ETest    --enable-preview --release 26 -> --release 25

The one non-mechanical piece is the processor's source version.
@SupportedSourceVersion(RELEASE_26) did not become RELEASE_25: a pinned
constant makes javac emit a "supported source version less than -source"
warning in the build of every consumer compiling at a higher release, and
consumers legitimately do — the kernel's preview line runs JDK 28 EA. It is now
a getSupportedSourceVersion() override returning SourceVersion.latestSupported().
The processor reads only the annotation surface through javax.lang.model, so it
has no reason to refuse a newer release.

The ASM override stays. 9.9.1 reads majors 69 and 70 alike, so keeping it costs
nothing and leaves the preview line buildable.

Behaviour-neutral by design and by result: 82 / 99 / 388 / 43 / 24 on a full
mvn install running on JDK 25, unchanged from U0; reactor classes verified at
class-file major 69.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GSLNS9PDxBXsY1dBY3e5PJ